# kamino

./: .clippy.toml  AGENTS.md  Cargo.toml  README.md  TODO.md  rustfmt.toml
.github/workflows/: main.yml
kamino/: Cargo.toml
kamino-lib/: Cargo.toml
kamino-lib/src/: cursor.rs  lib.rs
kamino-lib/src/piece/: board.rs  corner.rs  l.rs  mod.rs  piece.rs  piece_builder.rs  rectangle.rs  square.rs  z.rs
kamino-macro/: Cargo.toml
kamino-macro/src/: lib.rs
kamino/src/: main.rs
t-triste-lib/: Cargo.toml
t-triste-lib/src/: cursor.rs  lib.rs
t-triste-lib/src/piece/: mod.rs  piece_builder.rs
